Changed a few words. Also my title for GLP

--- a/Kensei_resume.tex
+++ b/Kensei_resume.tex
@@ -61,9 +61,9 @@ Vancouver, Canada
 \item Performed differential gene expression analysis using edgeR on murine fibroblasts upon stimulations with TNF and LPS
 \item Visualized and interpreted various RNA-seq data using R and various R packages such as ggplot2 and pheatmap
 \item Conducted ChIP-seq of RelB transcription factor in murine fibroblasts 
-\item Analyzed and interpreted data from ChIP-seq experiments using softwares such as deepTools, Integrated Genome Viewer, and HOMER
+\item Analyzed and interpreted data from ChIP-seq experiments using softwares such as MACS, deepTools, Integrated Genome Viewer, and HOMER
 \item Design ChIP-qPCR experiments to identify binding of ISGF3 and GAF transcription factors at gene promoters of interest
-\item Mentor an undergraduate student on computational analysis through weekly meetings
+\item Mentor an undergraduate student on RNA-seq analysis
 \end{rSubsection}
 
 
@@ -94,7 +94,9 @@ Experimental Techniques & ChIP-qPCR, ChIP-seq, primer design, cell culture, geno
 \begin{rSection}{Posters/Oral Presentations}
 \begin{enumerate}
   \item \textbf{Kishimoto K}, Cheng Q, Wilder C, Buchanan J, Hoffmann A. Type-I interferon induces temporally distinct activities of two STAT1-containing transcription factor complexes. \textit{American Physician Scientist Association Annual Meeting}, May 2019
+  
   \item \textbf{Kishimoto K}, Cheng Q, CS Ng, Hoffmann A. Studying RelB's Role as a Negative Regulator of IFN-\textbeta \:by ChIP-seq Analysis. \textit{Bruins-In-Genomics Program}, August 2018
+  
   \item Ngo K, \textbf{Kishimoto K}, Hoffmann A. Structure-Function Analysis of NF-\textkappa B/RelA in Activating Endogenous Target Gene Expression. \textit{Undergraduate Research Poster Day}, May 2018
 
   \item \textbf{Kishimoto K}, Boltz T, Ngo K, Hoffmann A. Differential Gene Expression Analysis of an NF\textkappa B/RelA Transactivation Domain Mutant. \textit{Bruins-In-Genomics Program}, August 2017
@@ -118,7 +120,6 @@ Experimental Techniques & ChIP-qPCR, ChIP-seq, primer design, cell culture, geno
 \item Managed the volunteering programs for 30 undergraduate students, working closely with ChildLife specialists
 \item Fundraised \textdollar 6,504 collectively for our annual event Cranes for Cancer to donate to Alex's Lemonade Stand Foundation to fund pediatric cancer research\end{rSubsection}
 
-
 \begin{rSubsection}{Curriculum Director and Finance Director}{Jan 2017-Present}{Glendale Learning Program}{UCLA}
 \item[] {\em Glendale Learning Program promotes educational equity through personalized tutoring and mentorship. We have over 20 volunteers and work with over 30 middle school students.}
 \item Tutored and mentored middle school students from immigrant families and underprivileged background weekly
@@ -137,7 +138,7 @@ Experimental Techniques & ChIP-qPCR, ChIP-seq, primer design, cell culture, geno
 
 \begin{rSection}{Awards}
 June 2017-2018 \hspace{3em} Awardee, Bruins-In-Genomics Summer Program Grant\\
-August 2017 \hspace{4.3em} Best Poster Award recipient, Bruins-In-Genomics Summer Program \\
+August 2017 \hspace{4.3em} Best Poster Award, Bruins-In-Genomics Summer Program \\
 May 2017 \hspace{5.5em} Most Dedicated Volunteer Award, BFPC \\
 Fall 2017-Present \hspace{2.2em} Dean's List \\
 Fall 2017-Present \hspace{2.2em} Honors College Program, UCLA\\
